wip: power user layout

--- a/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
@@ -1,1 +1,26 @@
-<p>power-dashboard works!</p>
+<div *ngIf="layoutParameters" class="p-16">
+  <mat-grid-list [cols]="layoutParameters.columnCount"
+                 rowHeight="32px"
+                 gutterSize="16px"
+                 >
+    <mat-grid-tile
+      [colspan]="layoutParameters.columnSpans.chart"
+      [rowspan]="layoutParameters.rowSpans.chart">
+      <mat-card>
+        <app-balance-chart
+          [account]="account"
+          [priceBtc]="priceBtc"
+          [priceUsd]="priceUsd"
+          [priceEur]="priceEur"
+        ></app-balance-chart>
+      </mat-card>
+    </mat-grid-tile>
+    <mat-grid-tile
+      [colspan]="layoutParameters.columnSpans.balance"
+      [rowspan]="layoutParameters.rowSpans.balance">
+      <mat-card>
+        <app-balance [account]="account"></app-balance>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
