--- a/web/angular-wallet/src/app/main/dashboard/simple-dashboard/simple-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/simple-dashboard/simple-dashboard.component.html
@@ -8,11 +8,11 @@
   ></app-balance-chart>
 
   <div class="body">
-    <mat-grid-list [cols]="gridAttributes.columnCount" rowHeight="32px">
+    <mat-grid-list [cols]="layoutParameters.columnCount" rowHeight="32px">
       <mat-grid-tile
         *ngIf="!account.confirmed && account.balanceNQT"
-        [colspan]="gridAttributes.columnCount"
-        [rowspan]="gridAttributes.rowSpans.warning">
+        [colspan]="layoutParameters.columnCount"
+        [rowspan]="layoutParameters.rowSpans.warning">
         <div class="activation-message">
           <mat-icon>warning</mat-icon>
           <span>{{ 'no_public_key_warning' | i18n }}</span>
@@ -20,14 +20,14 @@
                   disabled="{{isActivating}}">{{'activate' | i18n}}</button>
         </div>
       </mat-grid-tile>
-      <mat-grid-tile [colspan]="gridAttributes.columnSpans.table" [rowspan]="gridAttributes.rowSpans.table">
+      <mat-grid-tile [colspan]="layoutParameters.columnSpans.table" [rowspan]="layoutParameters.rowSpans.table">
         <div class="fuse-card mr-8 scroll-y">
           <div class="h3 secondary-text mb-8">{{ 'recent_transactions' | i18n }}</div>
           <app-transaction-table *ngIf="dataSource && dataSource.data.length"
                                  [dataSource]="dataSource"
                                  [account]="account"
                                  [paginationEnabled]="false"
-                                 [displayedColumns]="gridAttributes.tableColumns"
+                                 [displayedColumns]="layoutParameters.tableColumns"
           ></app-transaction-table>
           <div *ngIf="!dataSource || !account.transactions.length">
             <div>
@@ -45,7 +45,7 @@
       <!--          <app-performance></app-performance>-->
       <!--        </div>-->
       <!--      </mat-grid-tile>-->
-      <mat-grid-tile [colspan]="gridAttributes.columnSpans.market" [rowspan]="gridAttributes.rowSpans.market">
+      <mat-grid-tile [colspan]="layoutParameters.columnSpans.market" [rowspan]="layoutParameters.rowSpans.market">
         <div class="fuse-card ml-8">
           <div class="h3 secondary-text ">{{ 'market_info' | i18n }}</div>
           <app-market-overview></app-market-overview>
