--- a/web/angular-wallet/src/app/main/dashboard/simple-dashboard/simple-dashboard.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/simple-dashboard/simple-dashboard.component.scss
@@ -56,4 +56,16 @@
       margin: 4px;
     }
   }
+
+  mat-card {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mat-grid-tile .mat-figure {
+    padding: 4px !important;
+  }
 }
