--- a/web/angular-wallet/src/app/main/dashboard/widgets/balance-chart/balance-chart.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/balance-chart/balance-chart.component.html
@@ -1,21 +1,20 @@
-<div id="balance-diagram-charts-wrapper" (mouseenter)="showPoints()" (mouseleave)="hidePoints()">
+<div class="fullwidth" (mouseenter)="showPoints()" (mouseleave)="hidePoints()">
   <div class="main-widget" *ngIf="chart">
-    <div class="h-256 pb-16 blue-600">
-      <div class="pl-16 balance-info">
-        <div class="inline responsive">
-          <h1 class="pr-8 mb-0">{{accountBalances.totalBalance.getSigna() | amount}}</h1>
-          <div class="inline">
-            <small class="font-size-14 pr-8">{{calculateValue(priceBtc) | currency:'฿'}}</small>
-            <small class="font-size-14 pr-8">{{calculateValue(priceUsd) | currency:'USD'}}</small>
-            <small class="font-size-14">{{calculateValue(priceEur) | currency:'EUR'}}</small>
-          </div>
+    <div class="fuse-navy-500-fg">
+      <small class="grey-500-fg font-size-10 since-text">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate}}</small>
+      <div class="balance-info">
+        <h1 class="pr-8 mb-0">{{accountBalances.totalBalance.getSigna() | amount}}</h1>
+        <div class="inline">
+          <small class="font-size-12 pr-8">{{calculateValue(priceBtc) | currency:'฿'}}</small>
+          <small class="font-size-12 pr-8">{{calculateValue(priceUsd) | currency:'USD'}}</small>
+          <small class="font-size-12">{{calculateValue(priceEur) | currency:'EUR'}}</small>
         </div>
-        <div class="inline responsive">
-          <small class="font-size-14 pr-8">{{"balance_available"| i18n}}
-            : {{accountBalances.availableBalance.getSigna() | amount}}</small>
-          <small class="font-size-14">{{"balance_locked"| i18n}}
-            : {{accountBalances.lockedBalance.getSigna() | amount}}</small>
-        </div>
+        <!--        <div class="inline responsive">-->
+        <!--          <small class="font-size-14 pr-8">{{"balance_available"| i18n}}-->
+        <!--            : {{accountBalances.availableBalance.getSigna() | amount}}</small>-->
+        <!--          <small class="font-size-14">{{"balance_locked"| i18n}}-->
+        <!--            : {{accountBalances.lockedBalance.getSigna() | amount}}</small>-->
+        <!--        </div>-->
       </div>
       <div *ngIf="account.transactions.length">
         <div class="position-relative">
@@ -28,7 +27,6 @@
           >
           </canvas>
         </div>
-        <small class="pl-16">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate}}</small>
       </div>
       <div class="no-transactions" *ngIf="!account.transactions.length">
         <h1 class="align-center">{{"dashboard_welcome_title" | i18n}}</h1>
