--- a/web/angular-wallet/src/app/setup/account/create-active/custom-salt/custom-salt.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/custom-salt/custom-salt.component.html
@@ -3,9 +3,16 @@
 </h2>
 <div class="pin-container">
   <mat-form-field class="w-50-p">
-    <input matInput type="text" placeholder="{{'enter_salt' | i18n}}" [(ngModel)]="salt">
+    <input matInput
+           type="text"
+           autocomplete="off"
+           minlength="8"
+           maxlength="32"
+           placeholder="{{'enter_salt' | i18n}}"
+           [(ngModel)]="salt"
+    >
   </mat-form-field>
-  <button mat-icon-button (click)="generate()" matTooltip="{{'generate' | i18n}}">
+  <button mat-icon-button color="primary" (click)="generate()" matTooltip="{{'generate' | i18n}}">
     <mat-icon>shuffle</mat-icon>
   </button>
 </div>
@@ -13,6 +20,5 @@
   {{"salt_hint" | i18n }}
 </small>
 <div class="text-center navigation">
-  <button mat-raised-button (click)="reset()">{{"back" | i18n}}</button>
-  <button mat-raised-button (click)="next()">{{"next" | i18n}}</button>
+  <button mat-raised-button (click)="next()" [disabled]="salt.length < 8">{{"next" | i18n}}</button>
 </div>
