--- a/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/existing/existing.component.html
@@ -6,5 +6,5 @@
   </mat-form-field>
 </div>
 <div class="text-center navigation">
-  <button class="btn-success" mat-raised-button (click)="setManualPassphrase(this.passphrase)">Next</button>
+  <button class="btn-success" mat-raised-button (click)="next()">{{'next' | i18n }}</button>
 </div>
