--- a/web/angular-wallet/src/app/setup/account/create-active/create.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/create.component.html
@@ -6,8 +6,9 @@
                           [selectedIndex]="this.createService.getStep()"
                           labelPosition="bottom"
   >
-    <mat-step [completed]="this.createService.getSeed() !== undefined"
-              [editable]="!this.createService.isAccountGenerated()">
+    <mat-step>
+<!--      [completed]="true"-->
+<!--      [editable]="false"-->
       <ng-template matStepLabel>{{ 'generate' | i18n }}</ng-template>
       <div class="step-container">
         <ng-container *ngIf="newUser">
@@ -18,13 +19,20 @@
         </ng-container>
       </div>
     </mat-step>
-    <mat-step [completed]="this.createService.getSalt() !== undefined">
+    <mat-step
+      *ngIf="newUser"
+      [completed]="this.createService.getSalt() !== undefined"
+      [editable]="this.createService.getPin() === undefined"
+    >
       <ng-template matStepLabel>{{ 'salt' | i18n }}</ng-template>
       <div class="step-container">
           <app-custom-salt></app-custom-salt>
       </div>
     </mat-step>
-    <mat-step [completed]="this.createService.getAccount() !== undefined">
+    <mat-step
+      [completed]="this.createService.getAccount() !== undefined"
+      [editable]="this.createService.getPin() === undefined"
+    >
       <ng-template matStepLabel>{{ 'record' | i18n }}</ng-template>
       <div class="step-container">
         <app-account-create-record></app-account-create-record>
