--- a/web/angular-wallet/src/app/setup/account/create-active/create.component.scss
+++ b/web/angular-wallet/src/app/setup/account/create-active/create.component.scss
@@ -1,5 +1,11 @@
 @import "src/@fuse/scss/fuse";
 
+:host {
+  @media print {
+    visibility: hidden;
+  }
+}
+
 :host .mat-step-header .mat-step-icon-state-number.mat-step-icon-selected,
 :host .mat-step-header .mat-step-icon-state-done,
 :host .mat-step-header .mat-step-icon-state-edit {
