--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.html
@@ -1,5 +1,6 @@
-<section class="login" id="login-particles" [fusePerfectScrollbar]="false"
+<section class="login" [fusePerfectScrollbar]="false"
          [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
+  <app-watermark></app-watermark>
   <div class="login-passive__container">
     <div class="signup">
       <div class="signup__container">
