--- a/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
+++ b/web/angular-wallet/src/app/login/login-passive/login-passive.component.scss
@@ -10,10 +10,7 @@ $media-querie-screen: 1200px;
   align-items: center;
   overflow: hidden;
 
-  background: linear-gradient(60deg, #003D6E, #00579D);
-  -webkit-animation: bg 30s ease infinite;
-  -moz-animation: bg 30s ease infinite;
-  animation: bg 30s ease infinite;
+  background: #003D6E;
 
   .login-passive__container {
     position: absolute;
