--- a/web/angular-wallet/src/app/setup/account/create-active/record/record.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/record/record.component.html
@@ -25,7 +25,7 @@
       ID:
     </td>
     <td class="table__text">
-      {{this.createService.getAccount()?.account}}
+      <pre>{{this.createService.getAccount()?.account}}</pre>
     </td>
   </tr>
   <tr>
@@ -33,7 +33,7 @@
       {{ 'address' | i18n }}:
     </td>
     <td class="table__text">
-      {{this.createService.getAccount()?.accountRS}}
+      <pre>{{this.createService.getAccount()?.accountRS}}</pre>
     </td>
   </tr>
   <tr>
@@ -41,7 +41,7 @@
       {{ 'passphrase' | i18n }}:
     </td>
     <td class="table__text unselectable">
-      {{ this.createService.getPhrase() }}
+      <pre>{{ this.createService.getPhrase() }}</pre>
     </td>
     <td class="print-hide">
       <button class="icon-button" matTooltip="{{'click_to_copy_passphrase' | i18n}}"
