--- a/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-passive/create-passive.component.html
@@ -1,10 +1,10 @@
 <div class="address-container">
   <mat-form-field appearance="outline">
 
-    <input matInput prefix="{{addressPrefix}}-" pasteableAddress [patterns]="burstAddressPattern" mask="____-____-____-_____"
+    <input matInput prefix="{{addressPrefix}}-" pasteableAddress [patterns]="signumAddressPattern" mask="____-____-____-_____"
            [dropSpecialCharacters]="false" [showMaskTyped]="true" [(ngModel)]="address" name="address"
            placeholder="{{ 'address' | i18n }}">
   </mat-form-field>
   <button class="btn-error" mat-raised-button routerLink="/login">{{ 'cancel' | i18n }}</button>
-  <button class="btn-success" mat-raised-button (click)="submit(this.address)">{{ 'submit' | i18n }}</button>
+  <button class="btn-success" mat-raised-button (click)="submit()" [disabled]="address.length < 17">{{ 'submit' | i18n }}</button>
 </div>
