--- a/web/angular-wallet/src/app/login/login-active/login-active.component.html
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.html
@@ -1,8 +1,12 @@
-<section class="login" id="login-particles" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
-<div class="login-active__container">
+<section class="login" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
+  <app-watermark></app-watermark>
+
+  <div class="login-active__container">
     <div class="signup">
       <div class="signup__container">
-        <h1 *ngIf="newUser | async; else updateTitle" class="signup__title">{{ 'account_create_new' | i18n }}</h1>
+        <h1 *ngIf="newUser | async; else updateTitle"
+            class="signup__title print-hide">{{ 'account_create_new' | i18n }}
+        </h1>
         <app-account-create [newUser]="newUser | async"></app-account-create>
       </div>
     </div>
