--- a/web/angular-wallet/src/app/setup/account/create-active/create.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/create.component.html
@@ -6,8 +6,7 @@
                           [selectedIndex]="this.createService.getStep()"
                           labelPosition="bottom"
   >
-    <mat-step [completed]="this.createService.isPassphraseGenerated()"
-              [editable]="!this.createService.isPassphraseGenerated()">
+    <mat-step>
       <ng-template matStepLabel>{{ 'generate' | i18n }}</ng-template>
       <div class="step-container">
         <ng-container *ngIf="newUser">
@@ -18,14 +17,19 @@
         </ng-container>
       </div>
     </mat-step>
-    <mat-step
-      [completed]="this.createService.getAddress() !== undefined && this.createService.getId() !== undefined">
+    <mat-step *ngIf="newUser">
+      <ng-template matStepLabel>{{ 'salt' | i18n }}</ng-template>
+      <div class="step-container">
+        <app-custom-salt></app-custom-salt>
+      </div>
+    </mat-step>
+    <mat-step>
       <ng-template matStepLabel>{{ 'record' | i18n }}</ng-template>
       <div class="step-container">
         <app-account-create-record></app-account-create-record>
       </div>
     </mat-step>
-    <mat-step [completed]="this.createService.getPin() !== undefined">
+    <mat-step>
       <ng-template matStepLabel>{{ 'secure' | i18n }}</ng-template>
       <div class="step-container">
         <app-account-create-pin [lastStep]="!newUser"></app-account-create-pin>
