--- a/web/angular-wallet/src/app/setup/account/create-active/record/record.component.scss
+++ b/web/angular-wallet/src/app/setup/account/create-active/record/record.component.scss
@@ -1,5 +1,14 @@
 :host {
 
+  .centered {
+    display: flex;
+    justify-content: center;
+  }
+
+  img {
+    opacity: 0.6;
+  }
+
   .title {
     margin: 0;
   }
@@ -36,7 +45,7 @@
 
     &__text {
       font-weight: 100;
-      width: 100%;
+      width: 50%;
     }
   }
 
@@ -45,11 +54,12 @@
     text-align: left;
   }
 
-  .copy-button {
+  .icon-button {
     box-shadow: none;
     min-width: 0;
     line-height: 28px;
     padding: 0 10px;
+    margin-left: 4px;
   }
 
   .copy-icon {
@@ -62,6 +72,10 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+  }
+
+  .bordered {
+    border: 1px #E0E0E0 solid;
   }
 
   .navigation {
