wip: added tx table as widget to power user

--- a/web/angular-wallet/src/@fuse/scss/partials/_colors.scss
+++ b/web/angular-wallet/src/@fuse/scss/partials/_colors.scss
@@ -16,7 +16,7 @@
         @if ($is-dark) {
             background: map-get($background, background);
         } @else {
-            background: #F5F5F5;
+            background: #EAF0F6;
         }
     }
 
