--- a/web/angular-wallet/src/app/components/watermark/watermark.component.html
+++ b/web/angular-wallet/src/app/components/watermark/watermark.component.html
@@ -1,3 +1,4 @@
 <div id="watermark">
-  <img src="assets/images/logos/signum-node-white.svg" alt="Signum Logo Node">
+  <img *ngIf="invert" src="assets/images/logos/signum-node-white.svg" alt="Signum Logo Node">
+  <img *ngIf="!invert" src="assets/images/logos/signum-node-dark.svg" alt="Signum Logo Node">
 </div>
