--- a/web/angular-wallet/src/app/login/login-active/login-active.component.html
+++ b/web/angular-wallet/src/app/login/login-active/login-active.component.html
@@ -1,5 +1,5 @@
 <section class="login" [fusePerfectScrollbar]="false" [fusePerfectScrollbarOptions]="{suppressScrollY:true}">
-  <app-watermark></app-watermark>
+  <app-watermark invert="true"></app-watermark>
 
   <div class="login-active__container">
     <div class="signup">
