--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="w-100-p">
+  <app-watermark></app-watermark>
   <ng-container *ngIf="userProfile === 'simple'">
     <app-simple-dashboard></app-simple-dashboard>
   </ng-container>
