--- a/web/angular-wallet/src/app/main/dashboard/widgets/balance/balance.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/balance/balance.component.html
@@ -1,4 +1,4 @@
-<div class="balance fullwidth grey-700-fg">
+<div class="balance grey-700-fg">
   <div class="pr-8 chart">
     <canvas baseChart
             height="100"
