--- a/web/angular-wallet/src/styles.scss
+++ b/web/angular-wallet/src/styles.scss
@@ -53,7 +53,6 @@ app-market-overview {
   animation: pulse 2s infinite;
 }
 
-<<<<<<< HEAD
 .widget {
   display: flex;
   justify-content: center;
@@ -73,7 +72,8 @@ app-market-overview {
 
 .fullheight {
   height: 100% !important;
-=======
+}
+
 .print-hide{
   @media print {
     display: none !important;
@@ -85,7 +85,6 @@ app-market-overview {
   @media print {
     display: inherit !important;
   }
->>>>>>> main
 }
 
 @keyframes pulse {
