--- a/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/power-dashboard/power-dashboard.component.html
@@ -28,15 +28,16 @@
       [rowspan]="layoutParameters.rowSpans.market"
     >
       <!-- #FIXME: market widget -->
-      <app-balance class="widget"
-                   [account]="account">
-      </app-balance>
+      <app-market-overview class="widget">
+      </app-market-overview>
     </mat-grid-tile>
     <mat-grid-tile
       [colspan]="layoutParameters.columnSpans.table"
       [rowspan]="layoutParameters.rowSpans.table"
     >
-      <app-transactions-table-widget class="widget"></app-transactions-table-widget>
+      <app-transactions-table-widget class="widget"
+                                     [displayedColumns]="layoutParameters.tableColumns"
+      ></app-transactions-table-widget>
     </mat-grid-tile>
   </mat-grid-list>
 </div>
