--- a/web/angular-wallet/src/app/main/dashboard/widgets/balance/balance.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/balance/balance.component.scss
@@ -1,3 +1,5 @@
+@import "src/@fuse/scss/fuse";
+
 :host {
   .balance {
     display: flex;
@@ -22,5 +24,10 @@
 
   .locked {
     background-color: #0099ff;
+  }
+
+  .line {
+    border-top: 1px solid #E0E0E0;
+    width: 100%;
   }
 }
