--- a/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.html
@@ -6,8 +6,22 @@
 
 <ng-container *ngIf="!isLoading">
   <div fxFlex fxLayout="row" fxFlexAlign="center" class="grey-700-fg fullwidth">
-    <div class="pr-8 price-indicator" [ngClass]="{bg_green: !isChangeNegative(), bg_red: isChangeNegative()}">
-      <div>{{get24hChange()}}</div>
+    <div class="pr-8 price-indicator"
+    >
+      <div class="selected">
+        {{'price_change' | i18n}}: {{this.priceChangePeriod}}
+      </div>
+      <div class="price"
+           [ngClass]="{bg_green: !isChangeNegative(), bg_red: isChangeNegative()}"
+      >
+        {{getPriceChange()}}
+      </div>
+      <div class="selector">
+        <small (click)="selectChangePeriod('24h')">24h</small>
+        <small (click)="selectChangePeriod('7d')">7d</small>
+        <small (click)="selectChangePeriod('30d')">30d</small>
+        <small (click)="selectChangePeriod('1y')">1y</small>
+      </div>
     </div>
     <div fxFlex fxLayout="column">
       <small>{{'price' | i18n}}</small>
@@ -17,7 +31,7 @@
         <div>{{getPriceEur()}}</div>
       </div>
 
-      <hr class="line"/>
+      <hr class="line" />
 
       <small>{{'volume_24h' | i18n}}</small>
       <div class="info-row">
