--- a/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.scss
@@ -1,14 +1,46 @@
 //@import "src/@fuse/scss/fuse";
 :host {
   .price-indicator {
+    position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 25%;
-    border-radius: 8px;
-    padding: 2rem 0;
     margin-right: 1.5rem;
-    font-weight: bold;
+
+    .price {
+      border-radius: 8px;
+      padding: 2rem 0;
+      margin: 0.25rem 0;
+      font-weight: bold;
+      width: 100%;
+      text-align: center;
+    }
+
+    .selected {
+      top: 0;
+      font-size: 9px;
+      color: #333333;
+    }
+
+    .selector {
+      //position: absolute;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      left: 0;
+      width: 100%;
+
+      small {
+        font-size: 9px;
+        text-decoration-line: underline;
+        cursor: pointer;
+        user-select: none;
+        color: #0099ff;
+      }
+    }
+
   }
 
   .bg_green {
