feat: added api ref

--- a/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.scss
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/market/market-overview.component.scss
@@ -64,5 +64,14 @@
     justify-content: space-between;
     align-items: baseline;
   }
+
+  .market-url {
+    font-size: 10px;
+    color: #9E9E9E !important;
+    text-decoration: none;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+  }
 }
 
